--- a/src/main/webapp/app/exercises/file-upload/assess/file-upload-assessment.component.html
+++ b/src/main/webapp/app/exercises/file-upload/assess/file-upload-assessment.component.html
@@ -30,7 +30,7 @@
                             {{ attachmentExtension(submission.filePath!) | uppercase }}
                         </span>
                     </div>
-                    <button class="btn btn-success mt-4" (click)="addReferencedFeedback()" [disabled]="!canOverride">
+                    <button class="btn btn-success mt-4" (click)="addReferencedFeedback()" [disabled]="readOnly">
                         {{ 'artemisApp.fileUploadAssessment.addFeedback' | translate }}
                     </button>
                     <ng-container *ngIf="!busy && !notFound">
@@ -47,14 +47,14 @@
                                     [(assessment)]="referencedFeedback[i]"
                                     (assessmentChange)="updateAssessment()"
                                     (deleteAssessment)="deleteAssessment($event)"
-                                    [readOnly]="!canOverride"
+                                    [readOnly]="readOnly"
                                 ></jhi-assessment-detail>
                             </div>
                         </div>
                         <jhi-assessment-general-feedback
                             [(feedback)]="generalFeedback"
                             (feedbackChange)="validateAssessment()"
-                            [readOnly]="!canOverride"
+                            [readOnly]="readOnly"
                         ></jhi-assessment-general-feedback>
                     </ng-container>
                 </div>
