update edge case header text display

--- a/src/main/webapp/app/assessment/assessment-header/assessment-header.component.html
+++ b/src/main/webapp/app/assessment/assessment-header/assessment-header.component.html
@@ -16,7 +16,13 @@
         >
             Assessment locked by: otherUser
         </span>
-        <span id="assessmentReadOnly" *ngIf="isAssessor && isComplaint" class="ml-3" style="font-size: 65%;" jhiTranslate="artemisApp.assessment.assessmentReadOnly">
+        <span
+            id="assessmentReadOnly"
+            *ngIf="isAssessor && !isAtLeastInstructor && isComplaint"
+            class="ml-3"
+            style="font-size: 65%;"
+            jhiTranslate="artemisApp.assessment.assessmentReadOnly"
+        >
             There is a complaint for this assessment. Another tutor must respond
         </span>
         <span
@@ -30,7 +36,7 @@
         </span>
         <span
             id="assessmentLockedCurrentUser"
-            *ngIf="isAssessor && !isComplaint"
+            *ngIf="(isAssessor && !isComplaint) || (isAssessor && isAtLeastInstructor)"
             class="text-danger ml-3"
             style="font-size: 65%;"
             jhiTranslate="artemisApp.assessment.assessmentLockedCurrentUser"
