--- a/src/main/webapp/app/exercises/modeling/shared/modeling-editor.component.html
+++ b/src/main/webapp/app/exercises/modeling/shared/modeling-editor.component.html
@@ -85,7 +85,7 @@
         <span jhiTranslate="artemisApp.modelingEditor.helpModal.help">Help</span>
     </button>
 
-    <div #resizeContainer class="modeling-editor" [class.resizable]="resizeOptions">
+    <div #resizeContainer class="modeling-editor" [class.resizable]="resizeOptions" [ngStyle]="{ marginTop: isFullScreen ? '30px' : '' }">
         <div #editorContainer class="apollon-container"></div>
         <div *ngIf="resizeOptions" class="draggable-right">
             <fa-icon [icon]="'grip-lines-vertical'"></fa-icon>
