--- a/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
@@ -267,16 +267,17 @@
                 </div>
                 <div class="form-group-narrow">
                     <div class="form-check">
-                        <label class="form-check-label" for="field_useStaticCodeAnalysis">
+                        <label class="form-check-label" for="field_staticCodeAnalysisEnabled">
                             <input
                                 class="form-check-input"
                                 type="checkbox"
-                                name="useStaticCodeAnalysis"
-                                id="field_useStaticCodeAnalysis"
-                                [(ngModel)]="programmingExercise.useStaticCodeAnalysis"
+                                name="staticCodeAnalysisEnabled"
+                                id="field_staticCodeAnalysisEnabled"
+                                [disabled]="!!programmingExercise.id"
+                                [(ngModel)]="programmingExercise.staticCodeAnalysisEnabled"
                                 checked
                             />
-                            <span jhiTranslate="artemisApp.programmingExercise.useStaticCodeAnalysis">Use Static Code Analysis</span>
+                            <span jhiTranslate="artemisApp.programmingExercise.enableStaticCodeAnalysis">Enable Static Code Analysis</span>
                         </label>
                     </div>
                 </div>
