--- a/src/main/webapp/app/complaints/complaint-interactions.component.html
+++ b/src/main/webapp/app/complaints/complaint-interactions.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="(isExamMode && !noValidFeedbackRequestOrComplaintWasSubmittedWithinTheStudentReviewPeriod) || course?.complaintsEnabled">
-    <div class="mt-4" *ngIf="result && result.completionDate && !hasComplaint && !readOnly && !hasRequestMoreFeedback">
+    <div class="mt-4" *ngIf="result && result.completionDate && !hasComplaint && isCurrentUserSubmissionAuthor && !hasRequestMoreFeedback">
         <button
             class="btn btn-primary"
             [class.not-allowed]="(!isExamMode && numberOfAllowedComplaints <= 0) || !isTimeOfComplaintValid"
@@ -31,7 +31,7 @@
             [allowedComplaints]="numberOfAllowedComplaints"
             [maxComplaintsPerCourse]="calculateMaxComplaints()"
             [complaintType]="ComplaintType.COMPLAINT"
-            [readOnly]="readOnly"
+            [isCurrentUserSubmissionAuthor]="isCurrentUserSubmissionAuthor"
             (submit)="hasComplaint = true"
         ></jhi-complaint-form>
     </div>
@@ -41,7 +41,7 @@
             [exercise]="exercise"
             [resultId]="result?.id"
             [complaintType]="ComplaintType.MORE_FEEDBACK"
-            [readOnly]="readOnly"
+            [isCurrentUserSubmissionAuthor]="isCurrentUserSubmissionAuthor"
             (submit)="hasRequestMoreFeedback = true"
         ></jhi-complaint-form>
     </div>
