--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -82,17 +82,12 @@
                         <jhi-file-upload-exam-summary [submission]="getSubmissionForExercise(exercise)"></jhi-file-upload-exam-summary>
                     </ng-container>
                     <jhi-complaint-interactions
-                        *ngIf="
-                            getSubmissionForExercise(exercise) &&
-                            exercise.type !== QUIZ &&
-                            studentExam.exam.examStudentReviewStart &&
-                            studentExam.exam.examStudentReviewEnd &&
-                            isAfterStudentReviewStart()
-                        "
+                        *ngIf="getSubmissionForExercise(exercise) && exercise.type !== QUIZ && isAfterStudentReviewStart()"
                         class="mb-2 mt-2 ml-3"
                         [exercise]="exercise"
                         [participation]="getParticipationForExercise(exercise)"
                         [exam]="examWithOnlyIdAndStudentReviewPeriod"
+                        [testRun]="isTestRun"
                     >
                     </jhi-complaint-interactions>
                 </ng-container>
@@ -108,14 +103,12 @@
                     ></jhi-programming-exam-summary>
                 </ng-container>
                 <jhi-complaint-interactions
-                    *ngIf="
-                        exercise.assessmentType === AssessmentType.SEMI_AUTOMATIC;
-                        getSubmissionForExercise: exercise && studentExam.exam.examStudentReviewStart && studentExam.exam.examStudentReviewEnd && isAfterStudentReviewStart()
-                    "
+                    *ngIf="exercise.assessmentType === AssessmentType.SEMI_AUTOMATIC && getSubmissionForExercise(exercise) && isAfterStudentReviewStart()"
                     class="mb-2 mt-2 ml-3"
                     [exercise]="exercise"
                     [participation]="getParticipationForExercise(exercise)"
                     [exam]="examWithOnlyIdAndStudentReviewPeriod"
+                    [testRun]="isTestRun"
                 >
                 </jhi-complaint-interactions>
             </ng-container>
