--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -143,13 +143,19 @@ Generic styles
     }
 }
 
+.gutter {
+    background-color: $body-bg;
+}
+
 .error {
     color: white;
     background-color: red;
 }
+
 .invalid-feedback {
     display: block;
 }
+
 .pad {
     padding: 10px;
 }
@@ -667,27 +673,35 @@ Course Info Bar
     .background-editor-color {
         background: #f8f9fa;
     }
+
     .red {
         color: #ca2024;
     }
+
     .green {
         color: #3ea119;
     }
+
     .white {
         color: #ffffff;
     }
+
     .black {
         color: #000000;
     }
+
     .yellow {
         color: #fffa5c;
     }
+
     .blue {
         color: #0d3cc2;
     }
+
     .lila {
         color: #b05db8;
     }
+
     .orange {
         color: #d86b1f;
     }
